# tallyWeb

./: .clear-db.sh  .compose.yaml  .dockerfile  .dockerignore  .env  .gitignore  .reset-db.sh  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  dev-setup.sh  index.html  package-lock.json  pg_backup.sh
.cargo/: config.toml
.sqlx/: query-0c24ae10dc5f9ac4eac06c2c6b52658fee9754ede339ee411bdffaed131374e0.json  query-0d55336f589c87f2963d1e323eeb1d31a156d3bf92fceea6e903257939a15c00.json  query-1ee4cce2e4d4d7b062c866044ad1b4cf10e30cd160e030e5fd2f8bb2c11ea0dc.json  query-3531a87c7db46262b3b74b59fc057544fa619e8e5a0658cd7c3418e910011387.json  query-384625426c3dc55c9f60b4a0dcbbe385c5bbdc208329bb612766091db0d6f5e6.json  query-3c5d3278f029f4791eadbbfa11e13d2e8ddd5cd633ef0593aa2e93f08231a5a0.json  query-40f31c6d613ae9d27f30485bc617cc44ebe4917ea7cea8bc97c9d9ff44b74b93.json  query-4b67d024d1fd8c20c9f2c21a5450cb86dc4d9361c95c6ac1ab1b96e492379e20.json  query-88bdaae3e413c06aba29e8de32413ac571e16cacb643e97d2f13d57a62aa00ef.json  query-8e6ea678580dc1b617f1a33182024a33c7c01b95f5e2213f26ef4df6f161b884.json  query-94db0d221bb6d57f3b85dba157ac4204ea7afb48800a8cfc608ab02a28ab58ec.json  query-c2b61df89f979ac54caefc7e45c3d3347583d488278a6e1fb5acf7c83c62cf6b.json  query-dc95bc9b6508fd1ed79b2342e86e1d4f5917bcd3feb31850c96eb56964f8d3f3.json  query-ebe16ed136a064c1629d949e634c6152c1dfa7d982748716144982264c604142.json  query-edac5825f74e7839febdcf811fb5ebf776a55de25b5427b4a4bf38933257d10c.json  query-fa5ac79c57f568439e2fb97b56f81c2e8c6cdba0097a585e207572d0dbd0a837.json
assets/: privacy-policy.html
backend/: Cargo.toml  build.rs
backend/.sqlx/: query-08db9ae7b7b7ef9f6c30e62f1f1d3c87e55fe98f85859e1c2877c5ec6d17b7b4.json  query-0c24ae10dc5f9ac4eac06c2c6b52658fee9754ede339ee411bdffaed131374e0.json  query-1391ff47d3d297e32b108dcd828046b09b7b56ded607e6ea5bbf9b9009698b0f.json  query-164355230a2a4b726d154e61eca7c6420973f535e563ad0b79db3a9d7a18f41b.json  query-17ca08c3eb829b0c56435422ab0cdd0ba70aaa093e3508d2ed9dd6f086926f25.json  query-195b1cd241d5c5ad956458d7648c4404e3d71f81926bf3a4f6475cf4d922091c.json  query-195febc12c9c5513d8ddb9a5fd41f858ed53ce337c000cd4e359a4602fb1dd59.json  query-1a5c420bdc40e677a74c96bee0498c6ddbf16be375ff7e254fda233c4746a623.json  query-1b5e1a01d684aad80849b4db69956166b93f212274384bf91151b2b84a3dfa91.json  query-24393d9e6d76e545ec98923de56d5b894c873c804740539d10c123cb2137adee.json  query-260f68101f87b10db73aa6a6304a8d52e94ad9e94c1f07d9aede645a796d30ab.json  query-2828de4900fa3e382e86fa6932edad914fd49f890487998071cca2d71ec84cc3.json  query-380bba9ca6b4b4d519d85aaee595cf9af9a66534e5b70a560099795f77ba499b.json  query-3c5d3278f029f4791eadbbfa11e13d2e8ddd5cd633ef0593aa2e93f08231a5a0.json  query-44f3f06df4db34bcba6c7f8d0df0f2ed5a69369031d6dbd6bd10464b3e80d6f6.json  query-51cbed14ba97a682243c94c58c066698fe57cd3122b4fac4dcd36d19666332b8.json  query-55959be084cbfecef0db47bfb50283f3fa99a36f733a72f578c98ef896d4d2cb.json  query-567a9fc826eaa26f32c5a2eed49f15f45aaa9641d21a9cb3eba067f517f9a224.json  query-5ab8d79a4155f4a7b96d5ff5f3678af525454ab24ced31d1b52c8e4f8c6b4073.json  query-5c8115338d7f0f4da2a723377064b27c7c59ebbbca7d0429c22ad55851da64f6.json  query-71e344773724df2de28fd28494c65a62c1ae313a00322a03a7417409f58d25a9.json  query-740d400a9fdcb3311b9dd61bfafdc6871a08268339aa2fc0a6b959627614be91.json  query-79d01b682974cc6f2a8cfc3514fd3789745a8daee631b779c443cee8021d7ccd.json  query-79f6b33cee7eac1f67cc900ba729ba4a9d76b8639c3175adb418d61b278160d8.json  query-7bbc51ca0f4466ddcda3a784ff985ee77ddfa9cc99ebe4ed319fd72f1d5861b2.json  query-7c9d595554640fdfe9b0284c924068fda07bbb38bc63d0ee3b3a5fda646e8579.json  query-80da10db8ef6c8dba9c319efda693857c5a4e531a937d850adec6cee20067689.json  query-82e03c1c76fb542baf196c4eb49103e48e6d4733c1d83b48e4e459ef4247b51e.json  query-88c588c9edd771189c7646ec995efd57c922cf7366b0e21344395ded9509ae40.json  query-8a95f3943759e1108ad42a84c9d4c4ff66603a9ff968cfc55ada63ce03838c4b.json  query-8b3bc9dd604a349f1359585b08fa34c391e838d0922d3be154d458619f9b1137.json  query-8c2118589c5a9ddd676ff9a588c05bc66e71a352d9083263935a94ad9efb0495.json  query-8ea4609ecabc6dbafc262aea24eab363ee25e0dc76c19721907a7768e1e1f8c3.json  query-8f55994f3e98b91dc0b5fac7281df0cd42ef668a6ba1462c4e2ce9129d403134.json  query-95902a3dc974d14f46304f016f6eac17bae29013a76ab820421a296517737f47.json  query-9917699eebbc5858a97a8a2c23bcc56a94b97d23d723a9202ba8e3dca9805735.json  query-99a8e8a873edadc6ccc6c6404621ec0025bf753b4019c64d8e29776a6c2b7e87.json  query-9bdc4d3afe2b8156bfe51f8cd823c5bd41af99d40e9d95d5508bcf104240af69.json  query-a239e81afaf1cd0938536df2f52d6dcf6a1c2af11cd7230e8c2880de328bd9ec.json  query-a5a8fe3f160633adc88e3170074278c73eb90f312d1fafa993e7b7c7f4271c69.json  (+26 more)
backend/src/: auth.rs  counter.rs  counter_data.rs  lib.rs  phase.rs  types.rs
backup/: pg_backup.config  pg_backup.sh
components/: Cargo.toml
components/src/: about.rs  account_icon.rs  lib.rs  loading_screen.rs  message.rs  progressbar.rs  resizebar.rs  saving_screen.rs  select.rs  sidebar.rs  slider.rs  spinner.rs  statusbar.rs  time.rs  tooltip.rs  treeview.rs  types.rs
frontend/: Cargo.toml
frontend/src/: api.rs  app.rs  countable.rs  lib.rs  main.rs  middleware.rs  preferences.rs  saving.rs  screen.rs  session.rs  tests.module.scss  tests.rs
frontend/src/countable/: countable.rs  indexed.rs  mod.rs  nodes.rs  server.rs  signal.rs  store.rs
frontend/src/countable_v2/: countable.rs  indexed.rs  mod.rs  server.rs  signal.rs
frontend/src/elements/: about.module.scss  about.rs  account.rs  add_counter.rs  context_menu.module.scss  context_menu.rs  edit_form.module.scss  infobox.module.scss  infobox.rs  mod.rs  navbar.rs  new-counter.module.scss  overlay.module.scss  page.rs  sort_search.rs
frontend/src/pages/: change_password.rs  change_username.rs  create_acc.rs  edit.rs  layout.rs  login.rs  mod.rs  preferences.rs  privacy_pol.rs
frontend/src/pages/style/: edit.module.scss  home.module.scss  page.module.scss
frontend/style/: _main.module.scss  button.module.scss  edit.module.scss  login.module.scss
src/: app.rs  (+2 more)
(+75 files in other folders)
