[workspace]
members = [ "frontend", "backend", "components" ]
resolver = "2"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3
