[package]
name = "tallyweb-backend"
version = "0.3.8"
edition = "2021"
build = "build.rs"
description = "backend for the tallyweb site"
license = "MIT"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.29", features = ["serde"] }
dotenvy = "0.15.7"
pbkdf2 = { version = "0.12.2", features = ["password-hash", "simple"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["postgres", "chrono", "runtime-tokio-rustls", "macros", "uuid"] }
thiserror = "1.0.48"
uuid = { version = "1.7.0", features = ["v4", "rng", "fast-rng"] }
