[package]
name = "frontend"
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
cfg-if = "1"
http = { version = "0.2", optional = true }
leptos = { version = "0.6", features = ["nightly"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_actix = { version = "0.6", optional = true }
leptos_router = { version = "0.6", features = ["nightly"] }
wasm-bindgen = "=0.2.92"
js-sys = "0.3.64"
web-sys = { version = "0.3.69" }
serde = { version = "1.0.188", features = ["derive"] }
erased-serde = "0.3.31"
backend = { path = "../backend", optional = true }
components = { path = "../components" }
serde_json = "1.0.105"
gloo-storage = "0.3.0"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
serde_with = { version = "3.3.0", features = ["chrono"] }
leptos-use = { version = "0.10.10", features = ["ssr", "serde", "serde_json"] }
thiserror = "1.0.50"
dyn-clone = "1.0.16"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"], optional = true }
uuid = { version = "1.7.0", features = ["fast-rng", "v4", "serde"] }
futures = "0.3.30"
itertools = "0.12.1"
stylance = { version = "0.5.0", features = ["nightly"] }
cookie = { version = "0.18.1", features = ["percent-encode"] }
serde_qs = "0.13.0"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "dep:backend",
    "dep:tokio",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/actix",
]

[package.metadata.stylance]
output_dir = "./style/"
folders = ["./src/", "./style/"]
extensions = [".module.scss", ".module.css"]
class_name_pattern = "tallyweb-[name]-[hash]"
